# mtrm

./: .gitignore  Cargo.toml  README.md  WHY.ru.md
.github/workflows/: macos-dev.yml  rust.yml
app/: Cargo.toml  README.md  TASK.md  build.rs
app/src/: app.rs  cli.rs  commands.rs  events.rs  help.rs  main.rs  rename.rs  render.rs  selection.rs
app/src/tests/: cli_restore_and_rename_entry.rs  layout_scroll_and_recovery.rs  mod.rs  platform_key_profiles.rs  rename_and_clipboard.rs  runtime_render_and_save.rs  selection_mouse_and_input.rs  startup_and_restore_scenario.rs
crates/clipboard/: Cargo.toml  README.md  TASK.md
crates/clipboard/src/: lib.rs
crates/config/: Cargo.toml  README.md  TASK.md
crates/config/src/: lib.rs
crates/core/: Cargo.toml  README.md  TASK.md
crates/core/src/: lib.rs
crates/input/: Cargo.toml  README.md  TASK.md
crates/input/src/: lib.rs  tests.rs
crates/keymap/: Cargo.toml  README.md  default_keymap.toml
crates/keymap/src/: lib.rs
crates/layout/: Cargo.toml  README.md  TASK.md
crates/layout/src/: geometry.rs  lib.rs  snapshot.rs  tests.rs
crates/platform_keys/: Cargo.toml
crates/platform_keys/src/: lib.rs  tests.rs
crates/process/: Cargo.toml  README.md  TASK.md
crates/process/src/: lib.rs  platform_linux.rs  platform_macos.rs  platform_other.rs
crates/process/src/tests/: basic.rs  helpers.rs  interactive.rs  linux.rs  macos.rs  mod.rs  termios.rs
crates/process/tests/: legacy-regression-reference.md  shell_process.rs
crates/session/: Cargo.toml  README.md  TASK.md
crates/session/src/: lib.rs
crates/state/: Cargo.toml  README.md  TASK.md
crates/state/src/: lib.rs
crates/tabs/: Cargo.toml  README.md  TASK.md
crates/tabs/src/: lib.rs  selection.rs
crates/tabs/src/tests/: alternate_screen_env_and_selection.rs  lifecycle_snapshot_and_io.rs  mod.rs
crates/terminal_screen/: Cargo.toml  README.md
crates/terminal_screen/src/: lib.rs  tests.rs
crates/ui/: Cargo.toml  README.md  TASK.md
crates/ui/src/: lib.rs
crates/ui/src/tests/: colors_and_modal.rs  mod.rs  redraw_and_wide_chars.rs  selection_and_cursor.rs  tabs_notices_and_borders.rs
docs/: USER_GUIDE.md  USER_GUIDE.ru.md  WHY.md  WHY.ru.md
docs/engineering/: ARCHITECTURE.md  IMPLEMENTATION_ORDER.md  PORTABILITY_NOTES.md  TERMINAL_EMULATION.md  idea.engineering.md  idea.preliminary.md
