[workspace]
members = [
    "crates/core",
    "crates/platform_keys",
    "crates/config",
    "crates/keymap",
    "crates/layout",
    "crates/clipboard",
    "crates/process",
    "crates/terminal_screen",
    "crates/input",
    "crates/session",
    "crates/state",
    "crates/tabs",
    "crates/ui",
    "app",
]
resolver = "2"

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
