[package]
name = "mtrm"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28"
mtrm-clipboard = { path = "../crates/clipboard" }
mtrm-config = { path = "../crates/config" }
mtrm-core = { path = "../crates/core" }
mtrm-input = { path = "../crates/input" }
mtrm-keymap = { path = "../crates/keymap" }
mtrm-layout = { path = "../crates/layout" }
mtrm-process = { path = "../crates/process" }
mtrm-session = { path = "../crates/session" }
mtrm-state = { path = "../crates/state" }
mtrm-tabs = { path = "../crates/tabs" }
mtrm-ui = { path = "../crates/ui" }
ratatui = "0.28"
thiserror = "2"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
