[package]
name = "mtrm"
version = "0.3.5"
edition = "2024"
license = "MIT"
description = "A local terminal workspace manager with tabs, splits, and persistent layout"
repository = "https://github.com/algebrain/mtrm"
homepage = "https://github.com/algebrain/mtrm"

[package.metadata.deb]
name = "mtrm"
section = "utils"
priority = "optional"
maintainer = "algebrain"
depends = "$auto"
extended-description = """\
mtrm is a local terminal workspace manager focused on tabs, pane splits,
keyboard-driven control, and persisted layout."""

[dependencies]
crossterm = "0.28"
mtrm-clipboard = { path = "../crates/clipboard" }
mtrm-config = { path = "../crates/config" }
mtrm-core = { path = "../crates/core" }
mtrm-input = { path = "../crates/input" }
mtrm-keymap = { path = "../crates/keymap" }
mtrm-layout = { path = "../crates/layout" }
mtrm-process = { path = "../crates/process" }
mtrm-session = { path = "../crates/session" }
mtrm-state = { path = "../crates/state" }
mtrm-tabs = { path = "../crates/tabs" }
mtrm-ui = { path = "../crates/ui" }
ratatui = "0.30"
thiserror = "2"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
