[package]
name = "mtrm-state"
version = "0.3.6"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
mtrm-config = { path = "../config" }
mtrm-session = { path = "../session" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
mtrm-core = { path = "../core" }
mtrm-layout = { path = "../layout" }
serial_test = "3"
tempfile = "3"
